# yew_demo

./: .env  .sassrc.js  Cargo.toml  package-lock.json  package.json  tailwind.config.js
src/: app.rs  lib.rs
src/components/: footer.rs  input.rs  mod.rs  nav.rs
src/routes/: home.rs  mod.rs
src/routes/home/: mod.rs  service.rs  welcome.rs
src/utils/: mod.rs  shorten_address.rs
static/: index.html  output.css
