[package]
authors = ["You <you@example.com>"]
categories = ["wasm"]
description = "My awesome Yew app."
edition = "2018"
license = "Apache-2.0/MIT"
name = "yew-app"
readme = "./README.md"
repository = "https://github.com/jetli/create-yew-app.git"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
yew = "0.19.3"
yew-router = "0.16.0"
yew-hooks = "0.1.56"
wasm-bindgen = "=0.2.82"
wasm-logger = "0.2.0"
wee_alloc = "0.4.5"
image="0.24.3"
material-yew = { version = "0.2.0", features = ["full"] }
yew-octicons='0.3.1'
stdweb="0.4.13"
uuid = { version = "1.1.2", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
futures = "0.3.21"
gloo = "0.8.0"
hex = "0.4.3"
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
wasm-bindgen-futures = "0.4.31"
web-sys = { version = "0.3.58", features = ["Event"] }
web3 = { version = "0.18.0", default-features = false, features = ["wasm", "eip-1193"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.14"
gloo-utils = "0.1.0"

[dev-dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Element",
  "HtmlCollection",
]
